# Colecci-n-para-ejercicios-nociones-clave-Roberto-Cardenas

./: CMakeLists.txt  README.md
Proyecto 1/: Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  main.cpp  main.h
Proyecto 2/: funciones.cpp  funciones.h  main.cpp  matematicas.cpp  nuevo.cpp  principal.cpp  principal.h
